# SJM

./: Makefile.am  README.md  configure.ac
doc/: MANUAL.md  MANUAL.txt  example.sjm
src/: CLI.hpp  Makefile  Makefile.am  Makefile.in  batch.cc  job.cpp  job.h  job_graph.cc  job_graph.hh  job_mon.cc  job_mon.hh  loc.cc  loc.hh  lsf.cc  pipeline.cpp  pipeline.h  sge.cc  sjm.cc  task.cpp  task.h
